@@ -5,6 +5,8 @@ For more information see prusa-link_states.txt.
 
 import itertools
 
+from poorwsgi import state
+
 from prusa.connect.printer.errors import ErrorState, INTERNET, HTTP, TOKEN, \
     API
 
@@ -103,34 +105,133 @@ def get_all_error_states():
     return error_states
 
 
-class PrusaError:
-    """Error inspired by Prusa-Error-Codes"""
-    code: str
+class LinkError(RuntimeError):
+    """Link error structure."""
     title: str
     text: str
-    id_: str
+    id: str
+    status_code: int
 
-    def __init__(self, code: str, title: str, text: str):
-        self.code = code
-        self.title = title
-        self.text = text
-        self.id_ = title.replace(' ', '_')
+    def __init__(self):
+        self.path = '/error/' + self.id
+        super().__init__(self.text)
 
 
-PE_UPLOAD_SDCARD = PrusaError('024xx', 'SDCARD NOT SUPPORTED',
-                              'Location sdcard is not supported.')
-PE_LOC_NOT_FOUND = PrusaError('024xx', 'LOCATION NOT FOUND',
-                              'Location not found`.')
-PE_UPLOAD_BAD = PrusaError('024xx', 'BAD UPLOAD REQUEST',
-                           'No file or filename is set.')
-PE_UPLOAD_UNSUPPORTED = PrusaError(
-    '024xx', 'UNSUPPORTED MEDIA TYPE',
-    'File is not supported or it is not gcode.')
-PE_UPLOAD_CONFLICT = PrusaError(
-    '024xx', 'CURRENTLY PRINTED',
-    'Uploaded file is the same as currently printed')
-PE_UPLOAD_MULTI = PrusaError('024xx', 'ALREADY UPLOADING',
-                             'Only one file at time can be uploaded')
-PE_DOWNLOAD_CONFLICT = PrusaError(
-    '024xx', 'CURRENTLY PRINTED',
-    'Downloaded file is the same as currently printed')
+class BadRequestError(LinkError):
+    """400 Bad Request error"""
+    status_code = state.HTTP_BAD_REQUEST
+
+
+class NoFileInRequest(BadRequestError):
+    """File not found in request payload."""
+    title = "Missing file in payload."
+    text = "File is not send in request payload or it hasn't right name."
+    id = "no-file-in-request"
+
+
+class FileSizeMismatch(BadRequestError):
+    """File size mismatch."""
+    title = "File Size Mismatch"
+    text = "You sent more or less data than is in Content-Length header."
+    id = "file-size-mismatch"
+
+
+class ForbiddenCharacters(BadRequestError):
+    """Forbidden Characters."""
+    title = "Forbidden Characters"
+    text = "Forbidden vharacters in file name."
+    id = "forbidden-characters"
+
+
+class NotFoundError(LinkError):
+    """404 Not Found error"""
+    status_code = state.HTTP_NOT_FOUND
+
+
+class FileNotFound(NotFoundError):
+    """File Not Found"""
+    title = "File Not Found"
+    text = "File you want was not found."
+    id = "file-not-found"
+
+
+class SDCardNotSupoorted(NotFoundError):
+    """Some operations are not possible on SDCard."""
+    title = "SDCard is not Suppported"
+    text = "Location `sdcard` is not supported, use local."
+    id = "sdcard-not-supported"
+
+
+class LocationNotFound(NotFoundError):
+    """Location from url not found."""
+    title = "Location Not Found"
+    text = "Location `{location}` is not found, use local."
+    id = "location-not-found"
+
+    def __init__(self, location):
+        self.text = LocationNotFound.text.format(location)
+        super().__init__()
+
+
+class RequestTimeout(LinkError):
+    """408 Request Timeout"""
+    title = "Request Timeout"
+    text = "Request Timeout"
+    status_code = state.HTTP_REQUEST_TIME_OUT
+
+
+class ConflictError(LinkError):
+    """409 Conflict error"""
+    status_code = state.HTTP_CONFLICT
+
+
+class CurrentlyPrinting(ConflictError):
+    """409 Printer is currently printing"""
+    title = "Printer is currently printing"
+    text = "Printer is currently printing."
+    id = "currently-printing"
+
+
+class NotPrinting(ConflictError):
+    """409 Printer is not printing"""
+    title = "Printer Is Not Printing"
+    text = "Operation you want can be do only when printer is printing."
+    id = "not-printing"
+
+
+class FileCurrentlyPrinted(ConflictError):
+    """409 File is currently printed"""
+    title = "File is currently printed"
+    text = "You try to operation with file, which is currently printed."
+    id = "file-currently-printed"
+
+
+class TransferConflict(ConflictError):
+    """409 Already in transfer process."""
+    title = "Already in transfer process"
+    text = ("Only one file at time can be transferred.")
+    id = "transfer-conflict"
+
+
+class LengthRequired(LinkError):
+    """411 Length Required."""
+    title = "Length Required"
+    text = "Missing Content-Length header or no content in request."
+    id = "length-required"
+    status_code = state.HTTP_LENGTH_REQUIRED
+
+
+class EntityTooLarge(LinkError):
+    """413 Payload Too Large"""
+    title = "Request Entity Too Large"
+    text = "Not enough space in storage."
+    id = "entity-too-large"
+    status_code = state.HTTP_REQUEST_ENTITY_TOO_LARGE
+
+
+class UnsupportedMediaError(LinkError):
+    """415 Unsupported media type"""
+    title = "Unsupported Media Type"
+    text = "Only G-Code for FDM printer can be uploaded."
+    id = "unsupported-media-type"
+    status_code = state.HTTP_UNSUPPORTED_MEDIA_TYPE
