@@ -23,6 +23,7 @@
       - check Content-Length header
       - check if file is uploaded complete
       - check storage free space first
+      - errors refactoring
 
 0.5.1 (2021-07-16)
     * Implementation of print after upload endpoint
